src/app/pages/home-page/home-page.component.css
.jumbotron {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}

.gradient{
  background:
          linear-gradient(127deg, rgba(102, 173, 112, 0.8), rgba(74, 148, 72, 0) 12.35%),
          linear-gradient(336deg, rgba(56, 189, 138, 0.8), rgba(134, 179, 52, 0) 25.25%),
          linear-gradient(83deg, rgba(74, 204, 187, 0.8), rgba(57, 214, 117, 0) 50.63%),
          linear-gradient(175deg, rgba(27, 177, 119, 0.8), rgba(21, 177, 117, 0) 75.73%),
          linear-gradient(280deg, rgba(54, 211, 151, 0.8), rgba(34, 212, 174, 0) 90.73%);
  background-size: 400% 400%;
  display: flex;
  color:black;
  -webkit-animation: Gradient 10s ease infinite;
  -moz-animation: Gradient 10s ease infinite;
  animation: Gradient 10s ease infinite;
  overflow: hidden;
  background-color: white;
  flex-direction: row;
  width: 100vw;
}

@-webkit-keyframes Gradient {
  0%{background-position:0% 72%}
  50%{background-position:100% 29%}
  100%{background-position:0% 72%}
}
@-moz-keyframes Gradient {
  0%{background-position:0% 72%}
  50%{background-position:100% 29%}
  100%{background-position:0% 72%}
}
@keyframes Gradient { 
  0%{background-position:0% 72%}
  50%{background-position:100% 29%}
  100%{background-position:0% 72%}
}

a {
  color: #32a891;
  text-decoration: none !important;
  transition-duration: 0.2s;
  transition-timing-function: ease-out;
  transition-property: color;
}

a:hover {
  color:#47c7ad;
}

.section {
  background-color: white;
  padding: 5%;
}

.section .content {
  flex: 1 0 auto;
  display: flex;
  flex-direction: row;
}

.section >>> .title {
  font-size: 50px;
  font-weight: 600;
  line-height: 2em;
}

.section >>> .subtitle {
  font-size: 26px;
  font-weight: 300;
  line-height: 1.5em;
}

.section >>> img {
  object-fit: contain;
  max-width: 500px;
  max-height: 300px;
}

.header {
  display: flex;
  flex-direction: row;
  width: 100vw;
}

.header img {
  max-width: 50%;
}

.header .content {
  flex: 1 0 auto;
  width: 50%;
  padding: 5%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.title-header {
  font-size: 5vw;
  font-weight: 700;
  margin-bottom: 10px;
}

.subtitle-header {
  font-size: 3vw;
  font-weight: 300;
}

.paragraph {
  margin-bottom: 1em;
  line-height: 1.5em;
}

.caption {
  font-size: 17px;
  margin-top: 1em;
  margin-bottom: 1em;
  line-height: 1.5em;
}
button {
  border-radius: 10vw;
  border: 1px #ddd solid;
  background-color: rgb(27, 177, 119);
  color:white;
  width: 240px;
  height: 70px;
  font-size: 32px;
  font-weight: 300;
  transition: ease-out;
  transition-duration: 0.3s;
  transition-property: background-color;
  margin-top: 10px;
}

.sponsors {
  padding: 0% 5%;
  text-align: center;
  color: rgb(0, 0, 0);
  font-size: 50px;
  font-weight: bold;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.sponsors-title {
  padding: 2% 5%;
}

.sponsor-grid {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  flex-direction: row;
}

.sponsor-grid .sponsor-item {
  width: 30vw;
  margin: 1vw;
  height: 15vw;
}

.sponsor-desc {
  position: relative;
  top: -15vw;
  /* background-color: rgba(100,100,100,0); */
  background: radial-gradient(ellipse closest-side, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0));
  display: flex;
  justify-content: center;
  flex-direction: column;
  color: black;
  opacity: 0;
  font-weight: 300;
  transition: 0.3s cubic-bezier(0.215, 0.610, 0.355, 1);
  transition-property: filter, opacity;
  font-size: 26px;
  width: 30vw;
  height: 15vw;
  filter: blur(3px);
  line-height: 1.25rem;
  padding: 10px;
}

.sponsor-grid .sponsor-img img {
  width: 30vw;
  height: 15vw;
  object-fit: contain;
  transition: 0.3s cubic-bezier(0.215, 0.610, 0.355, 1);
  transition-property: filter, transform;
}

.sponsor-grid .sponsor-item:hover .sponsor-desc, .sponsor-grid .sponsor-item:active .sponsor-desc {
  /* background-color: rgba(160,160,160,0.8); */
  filter: blur(0px);
  opacity: 1;
}

.sponsor-grid .sponsor-item:hover .sponsor-img img, .sponsor-grid .sponsor-item:active .sponsor-img img {
  filter: blur(9px);
  transform: scale(0.9);
}

.sponsor-name {
  width: 20vw;
  margin: 1vw;
  color: black;
  font-weight: 300;
  font-size: 26px;
}

.gold-grad {
  background: linear-gradient(to right, rgba(204, 176, 19, 0), rgb(204, 176, 19), rgba(204, 176, 19, 0));
  padding: 20px 0px;
  width: 100vw;
}

.silver-grad {
  background: linear-gradient(to right, rgba(180, 180, 180, 0), rgb(180, 180, 180), rgba(180, 180, 180, 0));
  padding: 20px 0px;
  width: 100vw;
}

.green-grad {
  background: linear-gradient(to right, rgba(118, 211, 160, 0), rgb(118, 211, 160), rgba(118, 211, 160, 0));
  padding: 20px 0px;
  width: 100vw;
}

button:hover{
  background-color: rgb(65, 216, 158);
} 

.green {
  background-color: rgb(243, 248, 238);
}

.gray {
  background-color: rgb(219, 219, 219);
}

.centered  {
  text-align: center;
}

.vert {
  flex-direction: column !important;
  align-items: center;
}

.sponsor-line {
  background: linear-gradient(to right, rgb(219, 219, 219), rgb(192, 192, 192), rgb(219, 219, 219));
  height: 2px;
  color: none;
  width: 70vw;
}

@media (max-width: 2000px) {
  .section >>> .title {
    font-size: 44px;
  }
  .sponsors {
    font-size: 44px;
  }
  .sponsor-desc {
    font-size: 22px;
  }
  .sponsor-name {
    font-size: 30px;
  }
  .sponsor-name.medium {
    font-size: 22px;
  }
  .sponsor-name.small {
    font-size: 15px;
  }
  .section >>> .subtitle {
    font-size: 22px;
  }
  .section >>> img {
    max-width: 500px;
    max-height: 300px;
  }
  button {
    width: 208px;
    height: 60px;
    font-size: 29px;
  }
  .caption {
    font-size: 14px;
  }
}

@media (max-width: 1600px) {
  .section >>> .title {
    font-size: 34px;
  }
  .sponsors {
    font-size: 34px;
  }
  .sponsor-desc {
    font-size: 15px;
  }
  .sponsor-name {
    font-size: 25px;
  }
  .sponsor-name.medium {
    font-size: 20px;
  }
  .sponsor-name.small {
    font-size: 15px;
  }
  .section >>> .subtitle {
    font-size: 15px;
  }
  .section >>> img {
    max-width: 400px;
    max-height: 220px;
  }
  button {
    width: 120px;
    height: 35px;
    font-size: 15px;
  }
  .caption {
    font-size: 12px;
  }
}

@media (max-width: 1200px) {
  .jumbotron{
    display: flex;
    flex-direction: column;
  }
  .vert {
    flex-direction: row !important;
    align-items: center;
  }
  .section >>> .subtitle {
    font-size: 20px;
  }
  .sponsor-desc {
    font-size: 20px;
  }
  .sponsor-name {
    font-size: 25px;
  }
  .sponsor-name.medium {
    font-size: 20px;
  }
  .sponsor-name.small {
    font-size: 15px;
  }
  .section >>> img {
    margin: 0 10px;
  }
  .section >>> img {
    max-width: 300px;
    max-height: 300px;
  }
  button {
    width: 154px;
    height: 45px;
    font-size: 20px;
  }
  .caption {
    font-size: 12px;
  }
}

@media (max-width: 750px) {
  .section >>> .subtitle {
    font-size: 17px;
  }
  .sponsor-desc {
    font-size: 17px;
  }
  .sponsor-name {
    font-size: 20px;
  }
  .sponsor-name.medium {
    font-size: 18px;
  }
  .sponsor-name.small {
    font-size: 14px;
  }
  .section >>> img {
    max-width: 220px;
    max-height: 150px;
  }
  button {
    width: 120px;
    height: 35px;
    font-size: 15px;
  }
  caption {
    font-size: 8px;
  }
}

@media (max-width: 450px) {
  .section >>> .subtitle {
    font-size: 14px;
  }
  .sponsor-desc {
    font-size: 14px;
  }
  .sponsor-name {
    font-size: 16px;
  }
  .sponsor-name.medium {
    font-size: 13px;
  }
  .sponsor-name.small {
    font-size: 11px;
  }
  .section >>> img {
    margin: 20px 0px;
  }
  .section >>> img {
    max-width: 120px;
    max-height: 100px;
  }
  button {
    width: 86px;
    height: 25px;
    font-size: 12px;
  }
}

